--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
      <link rel="stylesheet" href="css/style.css">
      <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
      <script type="text/javascript" src="js/common.js"></script>
+     <script>
+       $(function(){
+         $(window).scroll(function(){
+           var scrollTop = $(window).scrollTop();
+           var wHeight = $(this).height();
+           if(scrollTop != 0 && scrollTop > wHeight){
+             $("ul#gnb li a img").attr("src","img/baseline_search_blue.png");
+           }else{
+             $("ul#gnb li a img").attr("src","img/baseline_search_white.png");
+           }
+         });
+       });
+     </script>
      <!--[if lt IE 9]>
        <script src = "http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
      <![endif]-->
